# apex

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
apex/: auth.py  server.py
apex-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apex-ui/src/: App.tsx  main.tsx  test-setup.ts
apex/adapter/: llm_adapter.py
apex/adapters/: base.py  factory.py  productivity.py  research.py
apex/analytics/: eval_metrics.py  store.py
apex/buffer/: context_buffer.py
apex/inference/: heuristic_gate.py  intent_engine.py  tau_calibrator.py
apex/ingest/: ingestor.py
apex/monitor/: live.py  signal_monitor.py
apex/pipeline/: coordinator.py
apex/retrieval/: bm25.py  hnsw_index.py  rrf.py
apex/scheduler/: speculative.py
docs/: apex_technical_overview.md  user_guide.md
docs/adr/: ADR-001-no-mock-testing.md  ADR-002-phase0-local-integration.md
docs/review_response/: grounded_prp_methodology.md
scripts/: annotate_dps.py  bench_baselines.py  bench_gate_hitrate.py  bench_gate_latency.py  bench_llm_latency.py  bench_prp_grounded.py  print_metrics.py  register_consumers.py  simulate_factory_sensor.py  simulate_session.py  vault_agent.py  watch_stream.py
tests/: test_adapter.py  test_adapters.py  test_analytics.py  test_auth.py  test_buffer.py  test_calibrator.py  test_factory_adapter.py  test_ingest.py  test_intent_engine.py  test_lora_infrastructure.py  test_mcp_server.py  test_monitor.py  test_multi_subscriber_overhead.py  test_pipeline.py  test_research_adapter.py  test_retrieval.py  test_scheduler.py
(+20 files in other folders)
