[project]
name = "apex"
version = "0.1.0"
description = "APEX — Application-agnostic Proactive Edge-native conteXt pushing: an on-device proactive context-delivery daemon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.5.1",
    "fastapi>=0.135.3",
    "hnswlib>=0.8.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.9.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "rdata>=1.1.0",
    "rich>=14.3.3",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
